[package]
name = "color_watermark"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An easy-to-use crate to embed color watermarks, using DCT and QIM-DM"
readme = "README.md"
repository = "https://github.com/haroldxie2308/color_watermark"

[dependencies]
bitvec = "1.0.1"
image = "0.25.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rustdct = "0.7.1"
yuvutils-rs = "0.2.6"
